[package]
name = "amber"
version = "0.5.0-alpha"
edition = "2021"
repository = "https://github.com/amber-lang/Amber"
homepage = "https://amber-lang.com/"
description = "The Programming Language compiled to Bash."
rust-version = "1.79"
build = "build.rs"

[package.metadata.deb]
maintainer = "Amber-Lang project"
license-file = "LICENSE.md"
copyright = "GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amber-meta = { path = "meta" }
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5.36"
colored = "2.0.0"
glob = "0.3"
heraclitus-compiler = "1.8.3"
include_dir = "0.7.4"
insta = "1.43.1"
itertools = "0.13.0"
regex = "1.12.2"
similar-string = "1.4.2"
test-generator = "0.3.1"
wildmatch = "2.4.0"

# test dependencies
[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
pretty_assertions = "1.4.1"
tempfile = "3.10.1"
tiny_http = "0.12.0"

[profile.release]
strip = true
lto = true
opt-level = 3

[profile.test]
opt-level = 3

[workspace]
members = ["meta"]

[build-dependencies]
build-helper = "0.1.1"
built = { version = "0.7", features = [ "git2" ] }
